--- a/404.html
+++ b/404.html
@@ -1,1 +1,10 @@
-Test
+<html>
+<head>
+<script type="text/javascript" language="JavaScript">
+    alert(location.href.toLowerCase());
+</script>
+</head>
+<body>
+
+</body>
+</html>
